[gd_scene load_steps=10 format=2]

[ext_resource path="res://resources/images/Background.svg" type="Texture" id=1]
[ext_resource path="res://resources/fonts/gomarice_no_continue.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://scripts/JoinExistingLobby.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=7]
size = 32
outline_size = 2
outline_color = Color( 0.341176, 0.133333, 0.133333, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 80
outline_size = 3
outline_color = Color( 0.333333, 0.329412, 0.164706, 1 )
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0, 0, 0, 1 )
draw_center = false

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource( 3 )

[node name="Background" type="Sprite" parent="."]
position = Vector2( 960, 540 )
scale = Vector2( 1.12, 1 )
texture = ExtResource( 1 )

[node name="DarkBackground" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.639216 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="MenuBackground" type="ColorRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -768.0
margin_top = -432.0
margin_right = 768.0
margin_bottom = 432.0
color = Color( 0.160784, 0.152941, 0.152941, 1 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="VBoxContainer" type="VBoxContainer" parent="MenuBackground"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="PanelContainer" type="PanelContainer" parent="MenuBackground/VBoxContainer"]
margin_right = 1536.0
margin_bottom = 47.0

[node name="HBoxContainer" type="HBoxContainer" parent="MenuBackground/VBoxContainer/PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 1529.0
margin_bottom = 40.0

[node name="Name" type="Label" parent="MenuBackground/VBoxContainer/PanelContainer/HBoxContainer"]
margin_right = 377.0
margin_bottom = 33.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 7 )
text = "Name"

[node name="Map" type="Label" parent="MenuBackground/VBoxContainer/PanelContainer/HBoxContainer"]
margin_left = 381.0
margin_right = 759.0
margin_bottom = 33.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 7 )
text = "Map"

[node name="Players" type="Label" parent="MenuBackground/VBoxContainer/PanelContainer/HBoxContainer"]
margin_left = 763.0
margin_right = 1140.0
margin_bottom = 33.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 7 )
text = "Players"

[node name="ButtonSpace" type="Label" parent="MenuBackground/VBoxContainer/PanelContainer/HBoxContainer"]
margin_left = 1144.0
margin_top = 9.0
margin_right = 1522.0
margin_bottom = 23.0
size_flags_horizontal = 3

[node name="PanelContainer2" type="PanelContainer" parent="MenuBackground/VBoxContainer"]
margin_top = 51.0
margin_right = 1536.0
margin_bottom = 779.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ScrollContainer" type="ScrollContainer" parent="MenuBackground/VBoxContainer/PanelContainer2"]
margin_left = 7.0
margin_top = 7.0
margin_right = 1529.0
margin_bottom = 721.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MenuBackground/VBoxContainer/PanelContainer2/ScrollContainer"]
margin_right = 1522.0
margin_bottom = 714.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 20

[node name="BackBtn" type="Button" parent="MenuBackground/VBoxContainer"]
margin_left = 688.0
margin_top = 783.0
margin_right = 847.0
margin_bottom = 864.0
grow_horizontal = 2
focus_mode = 0
size_flags_horizontal = 4
size_flags_vertical = 4
custom_colors/font_color = Color( 1, 0.964706, 0.333333, 1 )
custom_fonts/font = SubResource( 2 )
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/focus = SubResource( 5 )
custom_styles/normal = SubResource( 6 )
enabled_focus_mode = 0
text = "Back"

[connection signal="pressed" from="MenuBackground/VBoxContainer/BackBtn" to="." method="_on_BackBtn_pressed"]
